--- a/ProjektProgramowanie_MainPage/Properties/Resources.resx
+++ b/ProjektProgramowanie_MainPage/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Strona Głowna" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Strona Głowna.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Strona Głowna1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Strona Głowna1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
